[package]
name = "rusty-proxy"
version = "0.1.0"
authors = ["johnietre <johnietrebus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1.12.0", features = ["full"] }
